# credit_core_system

./: .env.example  .prettierignore  credit_core_system.code-workspace  credit_core_system.postman_collection.json  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
.husky/: pre-commit.sh
dependencies/develop/: requirements.txt
docker/microservice/: Dockerfile
docker/mysql_database/: Dockerfile
docker_compose/microservice/: deploy.full.yaml  image.build.yaml
docker_compose/mysql_database/: deploy.full.yaml  image.build.yaml
docs/diagrams/: states_machine.md
docs/postman/: credit_core_system.postman_collection.json
docs/swagger/: swagger.json
hooks/: pre-commit.sh
migrations/mysql_database/: 2025.06.16.00__create_inital_schema.sql
src/: credit_core_system.py
src/modules/account/graphql_controllers/: account_controller.py
src/modules/account/graphql_controllers_dtos/: account_dtos.graphql
src/modules/account/mappers/: account_mappers.py
src/modules/account/mysql_entites/: account_entity.py
src/modules/account/mysql_repositories/: account_repositorie.py
src/modules/account/rest_controllers/: account_controller.py
src/modules/account/rest_controllers_dtos/: account_dtos.py
src/modules/account/services/: account_service.py
src/modules/credit_request/graphql_controllers/: credit_request_controller.py
src/modules/credit_request/graphql_controllers_dtos/: credit_request_dtos.graphql
src/modules/credit_request/mappers/: credit_request_mappers.py
src/modules/credit_request/services/: credit_request_service.py  (+2 more)
(+34 files in other folders)
