[tool.poetry]
name = "credit_core_system"
version = "v1.3.2"
description = "a simple credit core backend implementation using fastapi as the main framework and a modular and hexagonal software architecture"
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13.5"
fastapi = "^0.111.0"
loguru = "^0.7.0"
pydantic = { extras = ["email"], version = "^2.6.4" }
uvicorn = "^0.29.0"
pydantic-settings = "^2.0.3"
pymysql = "^1.1.0"
sqlmodel = "^0.0.18"
httpx = "^0.27.0"
cachetools = "^5.3.3"
stamina = "^24.2.0"
asyncache = "^0.3.1"
pytz = "^2024.1"
ariadne = "^0.23.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.21.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
ruff = "^0.12.0"
poetry-audit-plugin = "^0.4.0"
poetry-plugin-export = "^1.7.1"

[tool.ruff]
extend-exclude = [".mypy_cache", ".pytest_cache", ".ruff_cache"]
extend-include = ["*.py", "*.pyi", "**/pyproject.toml"]
output-format = "grouped"
line-length = 180
indent-width = 4
src = ["."]
fix = true

[tool.ruff.format]
skip-magic-trailing-comma = true
quote-style = "double"

[tool.ruff.lint]
ignore = ["E203", "E402"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
force-single-line = true
no-sections = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
